--- a/skcrm/src/main/webapp/content/css/haiyun_gm.css
+++ b/skcrm/src/main/webapp/content/css/haiyun_gm.css
@@ -11,7 +11,7 @@ body {height: 100%;font-family:"Microsoft YaHei"; color:#333; background:#fff ur
 /*=============================登录页面样式====================================*/
 #floater {height: 42%;margin-bottom: -202px;position: relative;}
 .hy_login_main { margin:0 auto; width:1020px; height:558px; }
-.hy_login_title { margin:0 auto; width:612px; height:80px; background:url(../img/hy_login_titlebg.png) no-repeat;}
+.hy_login_title { margin-left:334px; width:612px; height:80px; background:url(../img/hy_login_titlebg.png) no-repeat;}
 .hy_login_tab { position:relative; margin:30px auto 0; height:448px; background:url(../img/hy_login_tabbg.png) no-repeat;}
 .hy_login_tab .hy_login_inpa { position:absolute; top:102px; left:614px; width:314px; height:30px; padding:5px; border:0; background:none}
 .hy_login_tab .hy_login_btna { cursor:pointer; position:absolute; top:305px; left:562px; width:180px; height:60px; background:none; border:0}
